[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LeBotTel"
version = "0.4.2"
dependencies = [
    "requests~=2.31.0"
]
readme = "README.md"
requires-python = ">=3.10.0"
license = {file = "LICENSE"}
authors = [
    {name = "Antonio Vidos"},
    {name = "Tobias Lettner"},
    {name = "Tobias Weiß"},
    {name = "Uwe Kölbl"},
    {email = "lebottel.team@gmail.com"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest~=7.4.3",
    "requests_mock~=1.11.0",
]
lint = [
    "ruff==0.7.4",
]
dev = [
    "LeBotTel[test,lint]"
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["tests"]

[toll.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pydodestyle
    "I",    # isort
    "ANN",  # flake8 type annotations
    "RUF",  # ruff specific rules
]
ignore = ["ANN101", "ANN102"]# ignore missing type annotations for self and cls in 


[tool.ruff.lint.pydocstyle]
convention = "google"
